@@ -1,5 +1,7 @@
 2000-04-14  Dave Peticolas  <peticola@cs.ucdavis.edu>
 
+	* src/engine/AccInfo.c: allow the price source to be set to NULL.
+
 	* lots of build system files: changes for the global id stuff.
 
 	* src/engine/GNCId.c: engine globally unique id api implementation.
